# ftyper

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: components.rs  display.rs  game.rs  layout.rs  main.rs  ngsl.txt  timer.rs  types.rs  words.rs
