[package]
name = "ftyper"
version = "0.0.1-alpha"
description = "Terminal typing practice"
authors = ["toppair <jbartapp@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["typing", "terminal", "touch-typing", "fast-typing", "game"]

[dependencies]
rand = "0.8.3"
termion = "1.5.6"
clap = "2.33.3"

